// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render collapsed sortable block 1`] = `
<section
  class="block"
  role="switch"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-more"
      class="su-more sortableHandle"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-eye"
          class="su-eye"
        />
        <span
          aria-label="su-people"
          class="su-people"
        />
      </div>
      <span
        aria-label="su-expand-vertical"
        class="su-expand-vertical"
      />
    </header>
    <article
      class="children"
    />
  </div>
</section>
`;

exports[`Render expanded sortable, non-collapsable block with types 1`] = `
<section
  class="block expanded"
  role="switch"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-more"
      class="su-more sortableHandle"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="types"
      >
        <div
          class="select"
          role="none"
        >
          <button
            class="displayValue default"
            type="button"
          >
            <div
              aria-label="Type 2"
              class="croppedText"
              title="Type 2"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Typ
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  e 2
                </span>
              </div>
              <div
                class="whole"
              >
                Type 2
              </div>
            </div>
            <span
              aria-label="su-angle-down"
              class="su-angle-down toggle"
            />
          </button>
        </div>
      </div>
      <div
        class="iconButtons"
      >
        <button
          type="button"
        >
          <span
            aria-label="su-more-circle"
            class="su-more-circle"
          />
        </button>
        <button
          type="button"
        >
          <span
            aria-label="su-cog"
            class="su-cog"
          />
        </button>
      </div>
    </header>
    <article
      class="children"
    >
      Test for Test Content and type type2
    </article>
  </div>
</section>
`;
